updated python file

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Set the Flask environment to development
 ENV FLASK_ENV=development
 ENV FLASK_APP=app.py
+ENV FLASK_DEBUG=1
 
 EXPOSE 5174
 
